--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,35 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root {
+    --background: #F2F3F5;
+    --gray-line: #DCDDE0; 
+    --text: #666666;
+    --text-highlight: #B3B9FF;
+    --title: #2E384D;
+    --red: #E83F5B;
+    --green: #4CD62B;
+    --purple: #5965E0;
+    --purple-dark: #4953B8;
+    --blue-twitter: #2AA9e0;
+}
+
+@media(max-width: 1080px) {
+    html {
+        font-size: 0.9375rem;
+    }
+}
+
+@media(max-width: 720px){
+    html{
+        font-size: 0.875rem;
+    }
+}
+
 
 body {
-    background: #f2f3f5;
-    color: #666;
+    background: var(--background);
+    color: var(--text);
 }
 
 body, input, textarea, button {
@@ -23,4 +48,45 @@ button {
 a {
     color: inherit; 
     text-decoration: none;
+}
+
+.container {
+    height: 100vh; 
+    max-width: 62rem;
+    margin: 0 auto;
+    padding: 2rem;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.experienceBar {
+    display: flex;
+    align-items: center;
+}
+
+.experienceBar span{
+    font-size: 1rem;
+    margin: 0 1rem;
+}
+
+.experienceBar > div {
+    flex: 1;
+    height: 4px;
+    border-radius: 0.25rem;
+    background: var(--gray-line);
+    margin: 0;
+    position: relative;
+}
+
+.experienceBar > div > div {
+    height: 4px;
+    border-radius: 0.25rem;
+    background: var(--green)
+}
+
+span.currentExpirience {
+    position: absolute;
+    top: 12px;
+    transform: translateX(-50%)
 }
